# compilecated

./: READEME.md  README.md  compilecated.cabal
src/: Codegen.hs  Emit.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  Types.hs
test/: build_failure.c  build_success.c  test.c  test1.c
