name:                compilecated
version:             0.1.0.0
synopsis:            Haskell C LLVM compoler for cs583
description:         Haskell C LLVM compoler for cs583
license:             MIT
license-file:        LICENSE-MIT
author:              Luc Bouchard
maintainer:          lbouchard010@@gmail.com
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10

executable compilecated
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules: 
    Parser
    Syntax
    Lexer
  build-depends:
      base                 >= 4.7 && <5
    , haskeline            >= 0.7.1.2
    , llvm-hs              >= 4.0.0.0
    , llvm-hs-pure         >= 4.0.0.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
  hs-source-dirs:      src/

